2004-06-17  Fred Kiefer <FredKiefer@gmx.de>

       * Source/NSComboBoxCell.m: buttonCellFrameFromRect(),
       (-drawWithFrame:inView:), (-highlight:withFrame:inView:) and
       (-trackMouse:...untilMouseUp:): Made draw bettere when used in a
       flipped view. (-positionWithComboBoxCell:) position popup correctly
       for flipped view.

2004-06-16  Fred Kiefer <FredKiefer@gmx.de>

        * Source/NSTableView.m: (-mouseDown:) Added mouse tracking in the cell.
        * Source/NSComboBoxCell.m: (-trackMouse:...untilMouseUp:) Set _lastValidFrame
	[GSComboWindow positionWithComboBoxCell:] compute position based on
	_lastValidFrame not the frame from the control view.
	
2004-06-16  Fred Kiefer <FredKiefer@gmx.de>

        * Source/NSTableView.m: (-mouseDown:) Reordered code and
	simplified. (-textShouldEndEditing:) Get formatter from
	_editedCell not _cell. (-_unselectAllColumns) Clear the header
	view as well.

2004-06-15  Fred Kiefer <FredKiefer@gmx.de>

        * Source/NSComboBoxCell.m: (-copyWithZone:) Added missing method.

2004-06-11  Adam Fedor  <fedor@gnu.org>

	* Version 0.9.3
	* Documentation/ReleaseNotes.gsdoc: New file
	* Documentation/GNUmakefile: generate ReleaseNotes. Update
	GuiUser make
	* Documentation/GuiUser/GNUmakefile: New file.
	* Source/DocMakefile: Remove GuiUser generation.

2004-06-09  Quentin Mathe <qmathe@club-internet.fr>

        * Source/NSComboBoxCell.m: Improved look, added constrained height and
	minor documentation change.
	* Source/NSComboBox.m: Added constrained height and minor documentation
	change.

2004-06-08  Fred Kiefer <FredKiefer@gmx.de>

        * Source/NSCell.m: (-drawWithFrame:inView:)
        * Source/NSFormCell.m: (-drawWithFrame:inView:)
        * Source/NSTableHeaderCell.m: (-drawWithFrame:inView:)
        * Source/NSTableView.m: (-drawRect:)
        * Source/NSColorWell.m: (-drawRect:)
        * Source/NSProgressIndicator.m: (+initialize, -drawRect:)
        * Source/NSScrollView.m: (-drawRect:)