@@ -82,6 +82,10 @@ APPKIT_EXPORT NSString * GSScreenNumber;
 - (id <NSDraggingInfo>) dragInfo;
 - (BOOL) slideImage: (NSImage*)image from: (NSPoint)from to: (NSPoint)to;
 - (void) restrictWindow: (int)win toImage: (NSImage*)image;
+- (int) findWindowAt: (NSPoint)screenLocation 
+           windowRef: (int*)windowRef 
+           excluding: (int)win;
+
 
 /* Screen information */
 - (NSSize) resolutionForScreen: (int)screen;
